# ts2ocaml-example

./: .envrc  .gitignore  .ocamlformat  LICENSE  Makefile  README.md  dune-project  example.opam  example.opam.template  mise.toml  package.json  pnpm-lock.yaml  tsup.config.ts
.github/workflows/: workflow.yml
lib/: dune
